# juce_audio_backend

./: .clang-format  CMakeLists.txt  README.md  juce_audio.cpp  test_main.cpp
include/: juce_audio.h
source/: juce_audio.cpp
test/: test_main.cpp
